💄 Feat: add additional styles
스타일을 더했으나, 색감 및 폰트 부분에서는 부족 추후 보완바람

--- a/styles/global.css
+++ b/styles/global.css
@@ -31,3 +31,13 @@ button,
 textarea {
   all: unset;
 }
+
+@layer components {
+  .btn-common {
+    @apply w-[36px] h-[36px] text-center border bg-white cursor-pointer rounded-lg transition-transform duration-300 ease-in-out;
+  }
+
+  .btn-hover:hover {
+    @apply transform scale-97 shadow-lg;
+  }
+}
