✨ Feat: Make sidebar structor and design

--- a/styles/global.css
+++ b/styles/global.css
@@ -40,4 +40,16 @@ textarea {
   .btn-hover:hover {
     @apply transform scale-97 shadow-lg;
   }
+
+  .nav-item {
+    @apply flex items-center text-white mb-4; 
+  }
+
+  .nav-item-icon {
+    @apply min-w-[3rem] text-center; 
+  }
+
+  .space-y-6 {
+    @apply space-y-6; 
+  }
 }
