--- a/styles/global.css
+++ b/styles/global.css
@@ -34,7 +34,7 @@ textarea {
 
 @layer components {
   .btn-common {
-    @apply w-[36px] h-[36px] text-center border bg-white cursor-pointer rounded-lg transition-transform duration-300 ease-in-out;
+    @apply w-[36px] h-[36px] text-center border bg-white cursor-pointer rounded-3xl transition-transform duration-300 ease-in-out;
   }
 
   .btn-hover:hover {
